# LucyX-Analysis-WhitespaceTokenizer

./: README
c/: .gitignore  INSTALL  Makefile.am  Makefile.in  config.h.in  configure  configure.ac
c/tests/: test_wstoker.c
core/LucyX/Analysis/: WhitespaceTokenizer.c  WhitespaceTokenizer.cfh  WhitespaceTokenizer.cfp
core/LucyX/Test/Analysis/: TestWhitespaceTokenizer.c  TestWhitespaceTokenizer.cfh  TestWhitespaceTokenizer.cfp
perl/: .gitignore  Build.PL
perl/buildlib/: Binding.pm
perl/lib/LucyX/Analysis/: WhitespaceTokenizer.pm
perl/t/: 001-whitespace_tokenizer.t
